# world-cup-watch-parties

./: .gitignore  CLAUDE.md  PRD.md  README.md  build.sh  extract_with_claude.py  import_watch_parties.py  models.py  pyproject.toml  render.yaml  sample_data.json
config/: settings.py  urls.py
data/: fifa_reference.json  ma_zip_centroids.json  watch_parties.json  world-cup-watch-parties.md
diagram/: build_schema_diagram.py  watch_party_schema.excalidraw
docs/: APPLE_APP_STORE.md  CAPACITOR.md
docs/appstore/: listing.md  privacy-policy.md
docs/plans/: app-store-DO-NOT-DO.md  app-store-submission.md
events/: admin.py  filters.py  geocoding.py  import_contract.py  models.py  places.py  search.py  serializers.py  urls.py  views.py  wikimedia.py
events/migrations/: 0001_initial.py  0002_venue_image_attribution_venue_image_source_and_more.py  0003_venue_image_url_alter_venue_image_attribution_and_more.py  0004_alter_venue_image_source.py  0005_refreshstate.py
events/tests/: conftest.py  test_admin.py  test_api.py  test_fifa_fixtures.py  test_fixture_refresh.py  test_fixtures_health.py  test_foundation.py  test_import.py  test_proximity.py  test_reference_data.py  test_search.py  test_venue_images.py
frontend/: .env.production  capacitor.config.ts  index.html  package-lock.json  package.json
frontend/android/: capacitor.settings.gradle
frontend/public/: privacy_worldcup.html  terms.html
frontend/src/: App.css  App.tsx  analytics.ts  api.ts  format.ts  index.css  main.tsx  native.ts  (+3 more)
scripts/: cf-dns.sh  make_social_assets.py  make_venue_fallbacks.py
(+90 files in other folders)
