[project]
name = "world-cup-watch-parties"
version = "0.1.0"
description = "Massachusetts World Cup 2026 watch-party finder — Django + DRF backend"
requires-python = ">=3.12"
dependencies = [
    "django>=5.1",
    "djangorestframework>=3.15",
    "django-cors-headers>=4.4",
    "pydantic>=2.7",
    "python-dotenv>=1.0",
    # Production WSGI server + static-file serving (harmless in dev).
    "gunicorn>=23.0",
    "whitenoise>=6.7",
]

[project.optional-dependencies]
# Production database driver. Installed separately so local dev can run on
# SQLite with zero native build steps (see README).
postgres = ["psycopg[binary]>=3.2"]
# LLM extraction pipeline (deferred-use in v1).
extract = ["anthropic>=0.40"]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-django>=4.8"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["tests.py", "test_*.py", "*_tests.py"]
